[package]
name = "psd2"
version = "0.0.1-alpha.2"
description = "European Payment Service Directive Utilites"
edition = "2021"
license = "MIT"
homepage = "https://github.com/syllabix/psd2"
keywords = ["openbanking", "psd2", "mtls"]
repository = "https://github.com/syllabix/psd2"
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.0"
rustls = { version = "0.20.2", features = ["dangerous_configuration"] }
webpki-roots = "0.22.1"
rustls-pemfile = "0.2.1"
hyper-rustls = "0.23.0"
url = "2.2.2"
futures-util = "0.3.18"
biscuit = "0.5.0"
